# CleanCode

./: .gitmodules  Balls  CMakeLists.txt  Makefile  README.md  main.cpp
includes/: Boid.hpp  CMakeLists.txt  Flock.hpp  render.hpp  render_assets.hpp  render_shape.hpp
lib/: Boid.hpp  CMakeLists.txt  Doig.hpp  Flock.hpp  Game.hpp  ball.hpp  boid.hpp  random.hpp  render.hpp  vector.hpp
model/: Boid.cpp  Flock.cpp  ball.cpp  boid.cpp  vector.cpp
src/: Boid.cpp  Doig.cpp  Flock.cpp  Game.cpp  main.cpp  random.cpp  render.cpp  render_assets.cpp  render_shape.cpp
visu/: render.cpp
